# mosaic

./: .gitignore  LICENSE  README.md
config/: config_ramjet.py  constants.py  default.py  dump.sh
src/: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTE.todo  format.sh
src/include/core/: datatypes.h  datatypes_config.h  edge-perfmon.cc  edge-perfmon.h  edge-processor.cc  edge-processor.h  global-fetcher.cc  global-fetcher.h  global-reducer.cc  global-reducer.h  index-reader.cc  index-reader.h  reader-base.cc  reader-base.h  tile-processor-follower.cc  tile-processor-follower.h  tile-processor.cc  tile-processor.h  tile-reader.cc  tile-reader.h  util.h  vertex-applier.cc  vertex-applier.h  vertex-domain.cc  vertex-domain.h  vertex-fetcher.cc  vertex-fetcher.h  vertex-perfmon.cc  vertex-perfmon.h  vertex-processor.cc  vertex-processor.h  vertex-reducer.cc  vertex-reducer.h
src/include/util/: .gitignore  arch.h  atomic_counter.h  column_first.h  cpu_topology.h  hilbert.h  read-context.h  row_first.h  runnable.h  util.h
src/include/util/perf-event/: perf-event-collector.h  perf-event-manager.h  perf-event-ringbuffer-sizes.h  perf-event-scoped.h
src/lib/core/: CMakeLists.txt  main-combined.cc  main-edge.cc  main-vertex.cc  util.cc
src/lib/core/algorithms/: algorithm-common.h  bfs.h  bp.h  cc.h  kmc.h  pagerank.h  spmv.h  sssp.h  tc.h
src/lib/util/: CMakeLists.txt  column_first.cc  hilbert.cc  read-context.cc  row_first.cc  runnable.cc  util.cc
src/lib/util/perf-event/: perf-event-collector.cc  perf-event-manager.cc  perf-event-ringbuffer-sizes.cc  perf-event-scoped.cc
src/test/: CMakeLists.txt  bool-array-test.cc  main.cc  partition-test.cc  tile-processor-test.cc  traversal-test.cc
src/test/rb/: CMakeLists.txt  client.cc  defines.h  host.cc  local.cc
src/tools/: CMakeLists.txt
src/tools/config/: cpuinfo.mic
src/tools/grc/: CMakeLists.txt  abstract-partition-manager.cc  abstract-partition-manager.h  binary-edge-reader.cc  binary-edge-reader.h  delim-edges-reader.cc  delim-edges-reader.h  iedges-reader-context.cc  iedges-reader-context.h  iedges-reader.cc  iedges-reader.h  in-memory-partition-manager.cc  in-memory-partition-manager.h  in-memory-partition-store.cc  in-memory-partition-store.h  ipartition-store.cc  ipartition-store.h  list-partition-store.cc  list-partition-store.h  main-in-memory.cc  main-partitioner.cc  main-rmat-generator.cc  main-rmat-tiler.cc  main-tiler.cc  partition-manager.cc  partition-manager.h  partition-store.cc  partition-store.h  remote-rmat-generator.cc  remote-rmat-generator.h  rmat-context.cc  rmat-context.h  rmat-edge-generator.cc  rmat-edge-generator.h  rmat-edge-receiver.cc  rmat-edge-receiver.h  rmat-tile-manager.cc  rmat-tile-manager.h  tile-manager.cc  tile-manager.h  (+2 more)
src/tools/post-grc/: CMakeLists.txt  index-reader.cc  index-reader.h  main-tile-indexer.cc
src/tools/scripts/: .gitignore  aggregate_diskstats.py  build.py  check_label.py  check_output.py  check_pr.py  config_engine.py  convert_adjacency_list_to_edge_list.py  convert_graph.py  convert_label.py  copy_binaries.py  countVertices.py  cpu-topology.py  delete_input.py  end_to_end_test.py  fileSizeInfo.py  generate_graph.py  generate_rmat_graph.py  get_stat_dat.sh  get_tile_info.py  icc-setup.sh  iobench_aggregate_plot.py  iobench_get_util.sh  iobench_stat.sh  iostat.sh  kernel-mon-on.sh  killall_engines.py  ls_all.py  parse_log.py  perf_stat.sh  post_grc.py  post_pgrc.py  pre-grc.py  proc.gp  rebalance_input.py  rm-grc.py  run-scalability.sh  run_all.py  run_benchmark.py  run_edge_engines.py  (+10 more)
src/unittest/: CMakeLists.txt  bool-array-test.cc  end-to-end-test-small-exec.cc  end-to-end-test-small-load.cc  main-mmap-test.cc  offset-test.cc  partition-test.cc  test-rb.cc  test.h  util-test.cc
src/util/: CMakeLists.txt
src/util/pci-ring-buffer/: README.md  TODO.txt
src/util/pci-ring-buffer/build_kernel/: Kconfig  Makefile
src/util/pci-ring-buffer/build_user/: .gitignore  Makefile  cpmic.sh  kill.sh  run-pair.sh  run-rbs-flow.sh
src/util/pci-ring-buffer/include/: arch.h  ring_buffer.h  ring_buffer_common.h  ring_buffer_scif.h
src/util/pci-ring-buffer/lib/: CMakeLists.txt  ring_buffer.c  ring_buffer_i.h  ring_buffer_porting.c  ring_buffer_porting.h  ring_buffer_scif.c
src/util/pci-ring-buffer/test_kernel/: rbs-blocking-ut.c
src/util/pci-ring-buffer/test_user/: rb-pair.c  rb-ut.c  rbs-blocking-ut.c  rbs-flow.c  rbs-ut.c
